tests/expand/should-fail/incant_passthrough.expanded.stderr
warning: unused imports: `NeonToken`, `arcane`, and `incant`
 --> tests/expand/should-fail/incant_passthrough.expanded.rs:1:16
  |
1 | use archmage::{arcane, incant, IntoConcreteToken, X64V3Token, NeonToken, ScalarToken};
  |                ^^^^^^  ^^^^^^                                 ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0658]: use of unstable library feature `panic_internals`: internal details of the implementation of the `panic!` and related macros
  --> tests/expand/should-fail/incant_passthrough.expanded.rs:31:13
   |
31 |             ::core::panicking::panic_fmt(
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `archmage::IntoConcreteToken`
  --> tests/expand/should-fail/incant_passthrough.expanded.rs:20:13
   |
20 |         use archmage::IntoConcreteToken;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
